--- a/config/apextoolgroup/default/image.style.homepage_news.yml
+++ b/config/apextoolgroup/default/image.style.homepage_news.yml
@@ -5,7 +5,7 @@ dependencies:
   module:
     - focal_point
 name: homepage_news
-label: 'Homepage News (350X200)'
+label: 'Homepage News Desktop (350X200)'
 effects:
   ac41d410-b377-4eb9-950e-5d2b6bc7efe3:
     uuid: ac41d410-b377-4eb9-950e-5d2b6bc7efe3
