--- a/config/apextoolgroup/default/image.style.markets_type.yml
+++ b/config/apextoolgroup/default/image.style.markets_type.yml
@@ -4,8 +4,8 @@ status: true
 dependencies:
   module:
     - focal_point
-name: markets_type_247_317
-label: 'Markets Type (247 × 317)'
+name: markets_type
+label: 'About Us Markets (247 × 317)'
 effects:
   50705b33-77b7-4b74-ba58-fce768578c3b:
     uuid: 50705b33-77b7-4b74-ba58-fce768578c3b
