--- a/config/apextoolgroup/default/image.style.womenintool.yml
+++ b/config/apextoolgroup/default/image.style.womenintool.yml
@@ -4,8 +4,8 @@ status: true
 dependencies:
   module:
     - focal_point
-name: about_footer
-label: 'about footer(350X350)'
+name: womenintool
+label: 'Women in tool footer Desktop (350X350)'
 effects:
   8635a74f-9bd6-4f78-98b6-605d9b8ca29c:
     uuid: 8635a74f-9bd6-4f78-98b6-605d9b8ca29c
