--- a/config/apextoolgroup/default/views.view.market_types.yml
+++ b/config/apextoolgroup/default/views.view.market_types.yml
@@ -4,7 +4,7 @@ status: true
 dependencies:
   config:
     - field.storage.node.field_listing_image
-    - image.style.markets_type_247_317
+    - image.style.markets_type
     - node.type.markets
   module:
     - media
@@ -144,7 +144,7 @@ display:
           type: media_thumbnail
           settings:
             image_link: ''
-            image_style: markets_type_247_317
+            image_style: markets_type
             image_loading:
               attribute: lazy
           group_column: target_id
