--- a/config/apextoolgroup/default/core.entity_view_display.node.slider.default.yml
+++ b/config/apextoolgroup/default/core.entity_view_display.node.slider.default.yml
@@ -9,8 +9,10 @@ dependencies:
     - field.field.node.slider.field_slider_link
     - field.field.node.slider.field_weight
     - node.type.slider
+    - responsive_image.styles.homepage_slider_and_page_banner
   module:
     - link
+    - media_responsive_thumbnail
     - text
     - user
 id: node.slider.default
@@ -26,11 +28,11 @@ content:
     weight: 3
     region: content
   field_banner_image:
-    type: entity_reference_entity_view
+    type: media_responsive_thumbnail
     label: hidden
     settings:
-      view_mode: default
-      link: true
+      responsive_image_style: homepage_slider_and_page_banner
+      image_link: ''
     third_party_settings: {  }
     weight: 1
     region: content
