--- a/config/apextoolgroup/default/core.entity_view_display.paragraph.inventor.default.yml
+++ b/config/apextoolgroup/default/core.entity_view_display.paragraph.inventor.default.yml
@@ -8,6 +8,9 @@ dependencies:
     - field.field.paragraph.inventor.field_media_item
     - field.field.paragraph.inventor.field_title
     - paragraphs.paragraphs_type.inventor
+    - responsive_image.styles.inventor_connect
+  module:
+    - media_responsive_thumbnail
 id: paragraph.inventor.default
 targetEntityType: paragraph
 bundle: inventor
@@ -30,11 +33,11 @@ content:
     weight: 3
     region: content
   field_media_item:
-    type: entity_reference_entity_view
+    type: media_responsive_thumbnail
     label: hidden
     settings:
-      view_mode: embed
-      link: false
+      responsive_image_style: inventor_connect
+      image_link: ''
     third_party_settings: {  }
     weight: 1
     region: content
