--- a/config/apextoolgroup/default/image.style.image_436x272.yml
+++ b/config/apextoolgroup/default/image.style.image_436x272.yml
@@ -5,7 +5,7 @@ dependencies:
   module:
     - focal_point
 name: image_436x272
-label: 'image (436X272)'
+label: 'Image and text Desktop (436X272)'
 effects:
   0868417d-7b10-42dc-b88d-65f21493b364:
     uuid: 0868417d-7b10-42dc-b88d-65f21493b364
