--- a/config/apextoolgroup/default/views.view.employee_gallery.yml
+++ b/config/apextoolgroup/default/views.view.employee_gallery.yml
@@ -8,11 +8,12 @@ dependencies:
     - field.storage.node.field_employee_photo
     - field.storage.node.field_short_description
     - node.type.employee_profile
+    - responsive_image.styles.gallery
     - taxonomy.vocabulary.employee_type
   content:
-    - 'taxonomy_term:employee_type:9c000219-4b12-40d7-a56f-52f5d556d077'
-    - 'taxonomy_term:employee_type:ff31c692-ef25-4293-8cc0-362d1ba26728'
+    - 'taxonomy_term:employee_type:89723e1b-4bf1-477a-9164-7bf7ac4fbc0d'
   module:
+    - media_responsive_thumbnail
     - node
     - taxonomy
     - text
@@ -83,9 +84,10 @@ display:
           empty_zero: false
           hide_alter_empty: true
           click_sort_column: target_id
-          type: entity_reference_entity_view
+          type: media_responsive_thumbnail
           settings:
-            view_mode: embed
+            responsive_image_style: gallery
+            image_link: ''
           group_column: target_id
           group_columns: {  }
           group_rows: true
@@ -424,7 +426,7 @@ display:
           plugin_id: taxonomy_index_tid
           operator: or
           value:
-            - 476
+            - 3
           group: 1
           exposed: false
           expose:
