--- a/config/apextoolgroup/default/views.view.homepage_news.yml
+++ b/config/apextoolgroup/default/views.view.homepage_news.yml
@@ -6,11 +6,11 @@ dependencies:
     - field.storage.node.body
     - field.storage.node.field_date
     - field.storage.node.field_media
-    - image.style.homepage_news
     - node.type.news
+    - responsive_image.styles.homepage_news
   module:
     - datetime
-    - media
+    - media_responsive_thumbnail
     - node
     - options
     - text
@@ -81,12 +81,10 @@ display:
           empty_zero: false
           hide_alter_empty: true
           click_sort_column: target_id
-          type: media_thumbnail
+          type: media_responsive_thumbnail
           settings:
+            responsive_image_style: homepage_news
             image_link: ''
-            image_style: homepage_news
-            image_loading:
-              attribute: lazy
           group_column: target_id
           group_columns: {  }
           group_rows: true
