--- a/config/apextoolgroup/default/views.view.homepage_product.yml
+++ b/config/apextoolgroup/default/views.view.homepage_product.yml
@@ -6,8 +6,10 @@ dependencies:
     - field.storage.node.field_media
     - field.storage.node.field_read_more
     - node.type.homepage_products
+    - responsive_image.styles.homepage_new_product
   module:
     - link
+    - media_responsive_thumbnail
     - node
     - user
 id: homepage_product
@@ -76,9 +78,10 @@ display:
           empty_zero: false
           hide_alter_empty: true
           click_sort_column: target_id
-          type: entity_reference_entity_view
+          type: media_responsive_thumbnail
           settings:
-            view_mode: embed
+            responsive_image_style: homepage_new_product
+            image_link: ''
           group_column: target_id
           group_columns: {  }
           group_rows: true
