--- a/config/apextoolgroup/default/webform.webform.contact_us.yml
+++ b/config/apextoolgroup/default/webform.webform.contact_us.yml
@@ -102,6 +102,7 @@ elements: |-
   business_name:
     '#type': textfield
     '#title': 'Business Name'
+    '#title_display': after
     '#states':
       visible:
         ':input[name="select_type"]':
@@ -110,6 +111,7 @@ elements: |-
   name:
     '#type': textfield
     '#title': Name
+    '#title_display': after
     '#required': true
     '#required_error': 'Name field is required.'
     '#states':
@@ -120,6 +122,7 @@ elements: |-
   email_address:
     '#type': email
     '#title': 'Email Address'
+    '#title_display': after
     '#required': true
     '#required_error': 'Email Address field is required.'
     '#states':
@@ -130,6 +133,7 @@ elements: |-
   phone_number:
     '#type': textfield
     '#title': 'Phone Number'
+    '#title_display': after
     '#pattern': '^\+(?:[0-9] ?){6,14}[0-9]$'
     '#pattern_error': 'Phone number must be in International format.'
     '#states':
@@ -140,9 +144,11 @@ elements: |-
   postal_code:
     '#type': textfield
     '#title': 'Postal Code'
+    '#title_display': after
   country:
     '#type': select
     '#title': Country
+    '#title_display': after
     '#options': country_names
     '#empty_option': ' '
     '#required': true
@@ -150,16 +156,19 @@ elements: |-
   address_actual:
     '#type': textfield
     '#title': Address
+    '#title_display': after
     '#required': true
     '#required_error': 'Address field is required.'
   city:
     '#type': textfield
     '#title': City
+    '#title_display': after
     '#required': true
     '#required_error': 'City field is required.'
   state_province:
     '#type': select
     '#title': State/Province
+    '#title_display': after
     '#options': state_province_names
     '#empty_option': ' '
     '#required': true
@@ -171,6 +180,7 @@ elements: |-
   state_province_text:
     '#type': textfield
     '#title': State/Province
+    '#title_display': after
     '#required': true
     '#required_error': 'State/Province field is required.'
     '#states':
@@ -180,6 +190,7 @@ elements: |-
   request_comments:
     '#type': textarea
     '#title': Request/Comments
+    '#title_display': after
     '#required': true
     '#required_error': 'Request/Comments field is required.'
     '#states':
