--- a/config/apex-tools/default/core.entity_view_display.taxonomy_term.product_specifications.default.yml
+++ b/config/apex-tools/default/core.entity_view_display.taxonomy_term.product_specifications.default.yml
@@ -6,6 +6,7 @@ dependencies:
     - field.field.taxonomy_term.product_specifications.field_long_name
     - field.field.taxonomy_term.product_specifications.field_specification_attr_key
     - field.field.taxonomy_term.product_specifications.field_specification_attribute_id
+    - field.field.taxonomy_term.product_specifications.field_table_name
     - taxonomy.vocabulary.product_specifications
   module:
     - text
@@ -43,6 +44,14 @@ content:
       link_to_entity: false
     third_party_settings: {  }
     weight: 2
+    region: content
+  field_table_name:
+    type: string
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    weight: 4
     region: content
 hidden:
   langcode: true
