--- a/config/apex-tools/default/migrate_plus.migration.at_product_specifications.yml
+++ b/config/apex-tools/default/migrate_plus.migration.at_product_specifications.yml
@@ -1,9 +1,7 @@
-uuid: 6e062171-84bb-48ad-a936-319a0deec6a1
+uuid: e34e4cd2-ea04-4ba7-9ee1-77c89ac5646f
 langcode: en
 status: true
 dependencies: {  }
-_core:
-  default_config_hash: hv4wezJhCbvyfwSYct7aOCfzHS4ywemkqtUxqmUeF6c
 id: at_product_specifications
 class: null
 field_plugin_method: null
@@ -32,6 +30,10 @@ source:
       name: remote_term_name
       label: 'Term Name'
       selector: Name
+    -
+      name: source_metadata
+      label: MetaData
+      selector: 'MetaData/Value[@AttributeID="Table Name"]'
   ids:
     remote_term_id:
       type: string
@@ -54,6 +56,7 @@ process:
         - remote_term_id
         - constants/TEXT
         - remote_term_name
+  field_table_name: source_metadata
   langcode:
     plugin: default_value
     default_value: en
