--- a/config/apex-tools/default/migrate_plus.migration.at_product_specifications_gb.yml
+++ b/config/apex-tools/default/migrate_plus.migration.at_product_specifications_gb.yml
@@ -1,9 +1,7 @@
-uuid: 3a8f2810-aaeb-4fc4-8c98-dd8600aac351
+uuid: 4a407fb6-88fd-436a-841c-900ca1385f3b
 langcode: en
 status: true
 dependencies: {  }
-_core:
-  default_config_hash: hMlW7Uvv7vMl9Uc87HqRyRpqq1rXZ1SgMKeWFnO9IOM
 id: at_product_specifications_gb
 class: null
 field_plugin_method: null
@@ -32,6 +30,10 @@ source:
       name: remote_term_name
       label: 'Term Name'
       selector: Name
+    -
+      name: source_metadata
+      label: MetaData
+      selector: 'MetaData/Value[@AttributeID="Table Name"]'
   ids:
     remote_term_id:
       type: string
@@ -54,6 +56,7 @@ process:
         - remote_term_id
         - constants/TEXT
         - remote_term_name
+  field_table_name: source_metadata
   langcode:
     plugin: default_value
     default_value: gb
