--- a/config/apextoolgroup/default/block.block.webform_contact_us.yml
+++ b/config/apextoolgroup/default/block.block.webform_contact_us.yml
@@ -1,4 +1,4 @@
-uuid: c584ca61-3347-4911-9945-8041698d6042
+uuid: 85914701-169f-45ac-8903-b13c3077014a
 langcode: en
 status: true
 dependencies:
@@ -13,7 +13,7 @@ dependencies:
 third_party_settings:
   block_class:
     classes: 'container application-form'
-id: webform_2
+id: webform_contact_us
 theme: apextoolgroup
 region: content
 weight: -5
@@ -21,8 +21,8 @@ provider: null
 plugin: webform_block
 settings:
   id: webform_block
-  label: Webform
-  label_display: '0'
+  label: 'Contact Form'
+  label_display: visible
   provider: webform
   webform_id: contact_us
   default_data: ''
