--- a/composer.json
+++ b/composer.json
@@ -144,6 +144,7 @@
         "drupal/rabbit_hole": "^1.0@beta",
         "drupal/recaptcha": "^3.0",
         "drupal/redirect": "^1.8",
+        "drupal/responsive_background_image": "^2.0@beta",
         "drupal/robotstxt": "^1.3",
         "drupal/schema_metatag": "^2.1",
         "drupal/search_api": "^1.28",
