--- a/config/apextoolgroup/default/core.extension.yml
+++ b/config/apextoolgroup/default/core.extension.yml
@@ -116,6 +116,7 @@ module:
   recaptcha: 0
   redirect: 0
   redirect_404: 0
+  responsive_background_image: 0
   responsive_image: 0
   robotstxt: 0
   search: 0
