--- a/config/apextoolgroup/default/views.view.homepage_product.yml
+++ b/config/apextoolgroup/default/views.view.homepage_product.yml
@@ -207,7 +207,7 @@ display:
           click_sort_column: uri
           type: link
           settings:
-            trim_length: 80
+            trim_length: null
             url_only: true
             url_plain: true
             rel: '0'
