--- a/config/apextoolgroup/default/views.view.homepage_slider.yml
+++ b/config/apextoolgroup/default/views.view.homepage_slider.yml
@@ -3,17 +3,14 @@ langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.media.field_media_image
     - field.storage.node.body
     - field.storage.node.field_banner_image
     - field.storage.node.field_footer_note
     - field.storage.node.field_slider_link
     - node.type.slider
   module:
-    - image
     - link
     - linkit
-    - media
     - node
     - text
     - user
@@ -239,16 +236,7 @@ display:
           distinct: false
           replica: false
           query_tags: {  }
-      relationships:
-        field_banner_image:
-          id: field_banner_image
-          table: node__field_banner_image
-          field: field_banner_image
-          relationship: none
-          group_type: group
-          admin_label: 'field_banner_image: Media'
-          plugin_id: standard
-          required: false
+      relationships: {  }
       header: {  }
       footer: {  }
       display_extenders: {  }
@@ -319,73 +307,9 @@ display:
           empty_zero: false
           hide_alter_empty: true
           click_sort_column: target_id
-          type: entity_reference_entity_view
-          settings:
-            view_mode: embed
+          type: entity_reference_entity_id
+          settings: {  }
           group_column: target_id
-          group_columns: {  }
-          group_rows: true
-          delta_limit: 0
-          delta_offset: 0
-          delta_reversed: false
-          delta_first_last: false
-          multi_type: separator
-          separator: ', '
-          field_api_classes: false
-        field_media_image:
-          id: field_media_image
-          table: media__field_media_image
-          field: field_media_image
-          relationship: field_banner_image
-          group_type: group
-          admin_label: ''
-          plugin_id: field
-          label: ''
-          exclude: false
-          alter:
-            alter_text: false
-            text: ''
-            make_link: false
-            path: ''
-            absolute: false
-            external: false
-            replace_spaces: false
-            path_case: none
-            trim_whitespace: false
-            alt: ''
-            rel: ''
-            link_class: ''
-            prefix: ''
-            suffix: ''
-            target: ''
-            nl2br: false
-            max_length: 0
-            word_boundary: true
-            ellipsis: true
-            more_link: false
-            more_link_text: ''
-            more_link_path: ''
-            strip_tags: false
-            trim: false
-            preserve_tags: ''
-            html: false
-          element_type: ''
-          element_class: ''
-          element_label_type: ''
-          element_label_class: ''
-          element_label_colon: false
-          element_wrapper_type: ''
-          element_wrapper_class: ''
-          element_default_classes: true
-          empty: ''
-          hide_empty: false
-          empty_zero: false
-          hide_alter_empty: true
-          click_sort_column: target_id
-          type: image_url
-          settings:
-            image_style: ''
-          group_column: ''
           group_columns: {  }
           group_rows: true
           delta_limit: 0
@@ -731,7 +655,6 @@ display:
         - 'user.node_grants:view'
         - user.permissions
       tags:
-        - 'config:field.storage.media.field_media_image'
         - 'config:field.storage.node.body'
         - 'config:field.storage.node.field_banner_image'
         - 'config:field.storage.node.field_footer_note'
