feature/APEX-268: ATG verify-third-party

--- a/config/apextoolgroup/default/config_ignore.settings.yml
+++ b/config/apextoolgroup/default/config_ignore.settings.yml
@@ -5,3 +5,4 @@ ignored_config_entities:
   - system.site
   - google_tag.container.google_tag_manager
   - google_tag.container.gtm_container
+  - recaptcha.settings
