APEX-258: Captcha field added

--- a/config/apextoolgroup/default/webform.webform.contact_us.yml
+++ b/config/apextoolgroup/default/webform.webform.contact_us.yml
@@ -310,8 +310,8 @@ settings:
   draft_loaded_message: ''
   draft_pending_single_message: ''
   draft_pending_multiple_message: ''
-  confirmation_type: page
-  confirmation_url: /about/contact-us/submission
+  confirmation_type: url
+  confirmation_url: /email-us/confirmation
   confirmation_title: 'Contact Us'
   confirmation_message: 'Thank you, your submission has been received.'
   confirmation_attributes:
