--- a/config/apextoolgroup/default/image.style.homepage_slider.yml
+++ b/config/apextoolgroup/default/image.style.homepage_slider.yml
@@ -5,7 +5,7 @@ dependencies:
   module:
     - focal_point
 name: homepage_slider
-label: 'Homepage slider and page banner - Desktop (1600×600)'
+label: 'Banner - Desktop (1440×445)'
 effects:
   9045d1f0-dd87-44d9-9946-e9ac5f8dff23:
     uuid: 9045d1f0-dd87-44d9-9946-e9ac5f8dff23
