--- a/config/apextoolgroup/default/image.style.homepage_slider_mobile.yml
+++ b/config/apextoolgroup/default/image.style.homepage_slider_mobile.yml
@@ -5,7 +5,7 @@ dependencies:
   module:
     - focal_point
 name: homepage_slider_mobile
-label: 'Homepage slider and page banner - Mobile (360×250)'
+label: 'Banner - Mobile (360×250)'
 effects:
   577ee028-8a6e-459c-bbc8-b389c50d2c3a:
     uuid: 577ee028-8a6e-459c-bbc8-b389c50d2c3a
