--- a/config/apextoolgroup/default/image.style.homepage_slider_tablet.yml
+++ b/config/apextoolgroup/default/image.style.homepage_slider_tablet.yml
@@ -5,7 +5,7 @@ dependencies:
   module:
     - focal_point
 name: homepage_slider_tablet
-label: 'Homepage slider and page banner - Tablet (768×350)'
+label: 'Banner - Tablet (768×350)'
 effects:
   43556600-b6ee-4f92-871a-4e6c4852675a:
     uuid: 43556600-b6ee-4f92-871a-4e6c4852675a
