--- a/config/apextoolgroup/default/views.view.acquia_search_solr.yml
+++ b/config/apextoolgroup/default/views.view.acquia_search_solr.yml
@@ -233,7 +233,7 @@ display:
               site_administrator: '0'
               content_editor: '0'
             expose_fields: false
-            placeholder: ''
+            placeholder: Search
             searched_fields_id: search_api_fulltext_searched_fields
           is_grouped: false
           group_info:
