--- a/config/apextoolgroup/default/block.block.exposedformacquia_search_solracquia_solr_search.yml
+++ b/config/apextoolgroup/default/block.block.exposedformacquia_search_solracquia_solr_search.yml
@@ -1,6 +1,6 @@
 uuid: 9e8e48fa-b479-4395-b6bf-31307df8a73b
 langcode: en
-status: false
+status: true
 dependencies:
   config:
     - views.view.acquia_search_solr
