APEX-290:Product migration.

--- a/config/apex-tools/default/migrate_plus.migration.at_products.yml
+++ b/config/apex-tools/default/migrate_plus.migration.at_products.yml
@@ -2,8 +2,6 @@ uuid: 8c92aebe-745f-4a2f-b515-cea365117048
 langcode: en
 status: true
 dependencies: {  }
-_core:
-  default_config_hash: lwSJ8tq13U_g00-W03NjCtbniW0StW0O7fEKFrFRZDw
 id: at_products
 class: null
 field_plugin_method: null
@@ -153,6 +151,12 @@ process:
     plugin: at_map_product_classification
     source: remote_product_classifications
     migration_instance: at_product_classifications_level_two
+    migration_instance_prefix: at_product_classifications_level_
+    apply_instance_suffix: 1
+    suffix_w1: one
+    suffix_w2: two
+    suffix_w3: three
+    suffix_w4: four
     classification_type:
       - 'Web Reference'
     langcode: en
