--- a/docroot/modules/custom/at_migrations/config/install/migrate_plus.migration.at_products.yml
+++ b/docroot/modules/custom/at_migrations/config/install/migrate_plus.migration.at_products.yml
@@ -145,6 +145,12 @@ process:
     plugin: at_map_product_classification
     source: remote_product_classifications
     migration_instance: at_product_classifications_level_two
+    migration_instance_prefix: at_product_classifications_level_
+    apply_instance_suffix: 1
+    suffix_w1: one
+    suffix_w2: two
+    suffix_w3: three
+    suffix_w4: four
     classification_type:
       - Web Reference
     langcode: en
