--- a/docroot/modules/custom/at_migrations/config/install/migrate_plus.migration.at_products_gb.yml
+++ b/docroot/modules/custom/at_migrations/config/install/migrate_plus.migration.at_products_gb.yml
@@ -145,6 +145,12 @@ process:
     plugin: at_map_product_classification
     source: remote_product_classifications
     migration_instance: at_product_classifications_level_two_gb
+    migration_instance_prefix: at_product_classifications_level_
+    apply_instance_suffix: 1
+    suffix_w1: one_gb
+    suffix_w2: two_gb
+    suffix_w3: three_gb
+    suffix_w4: four_gb
     classification_type:
       - Web Reference
     langcode: gb
