--- a/docroot/themes/custom/apextoolgroup/apextoolgroup.libraries.yml
+++ b/docroot/themes/custom/apextoolgroup/apextoolgroup.libraries.yml
@@ -91,3 +91,7 @@ contatc-us:
   js:
     js/contact-accordion.js: {}
 
+masonry:
+  js:
+    https://cdnjs.cloudflare.com/ajax/libs/masonry/4.2.2/masonry.pkgd.min.js: { type: external, minified: true }
+    js/office-masonry.js: {}
