APEX-260: sending broken configuration for QA

--- a/config/apextoolgroup/default/block.block.corevalues.yml
+++ b/config/apextoolgroup/default/block.block.corevalues.yml
@@ -25,4 +25,4 @@ visibility:
   request_path:
     id: request_path
     negate: false
-    pages: /core-values
+    pages: /about-us/leadership/core-values
