--- a/config/apextoolgroup/default/webform.webform.contact_us.yml
+++ b/config/apextoolgroup/default/webform.webform.contact_us.yml
@@ -95,6 +95,7 @@ elements: |-
   type_of_supplies:
     '#type': textfield
     '#title': 'Type of Supplies'
+    '#title_display': after
     '#required': true
     '#required_error': 'Type of Supplies field is required'
     '#states':
