--- a/config/apextoolgroup/default/block.block.pagetitle.yml
+++ b/config/apextoolgroup/default/block.block.pagetitle.yml
@@ -21,4 +21,4 @@ visibility:
   request_path:
     id: request_path
     negate: false
-    pages: "/product-types\r\n/about-us/community-engagement\r\n/leadership\r\n/core-values\r\n/about-us\r\n/sitemap\r\n/email-us/confirmation\r\n/product-suggestion-thankyou"
+    pages: "/product-types\r\n/about-us/community-engagement\r\n/leadership\r\n/about-us/leadership/core-values\r\n/about-us\r\n/sitemap\r\n/email-us/confirmation\r\n/product-suggestion-thankyou"
