Apex-311: Share feature added.

--- a/config/apex-tools/default/core.extension.yml
+++ b/config/apex-tools/default/core.extension.yml
@@ -2,6 +2,7 @@ _core:
   default_config_hash: R4IF-ClDHXxblLcG0L7MgsLvfBIMAvi_skumNFQwkDc
 module:
   address: 0
+  addtothis_apex_tool: 0
   acquia_search: 0
   admin_toolbar: 0
   advagg: 0
