APEX-260: Parse mode changed and email template changes

--- a/config/apextoolgroup/default/views.view.acquia_search_solr.yml
+++ b/config/apextoolgroup/default/views.view.acquia_search_solr.yml
@@ -247,7 +247,7 @@ display:
             default_group: All
             default_group_multiple: {  }
             group_items: {  }
-          parse_mode: direct
+          parse_mode: phrase
           min_length: null
           fields: {  }
         status_1:
