--- a/config/sata_us/default/webform.webform.warranty_abusers.yml
+++ b/config/sata_us/default/webform.webform.warranty_abusers.yml
@@ -168,6 +168,7 @@ access:
     permissions: {  }
   view_any:
     roles:
+      - anonymous
       - customer_support
     users: {  }
     permissions: {  }
