bugfix/APEX-564-AT-Issues-on-breadcrumbs Fix the issue.
bugfix/APEX-564-AT-Issues-on-breadcrumbs Fix the issue.

bugfix/APEX-564-AT-Issues-on-breadcrumbs Fix the issue.

--- a/config/apex-tools/default/pathauto.pattern.distributors.yml
+++ b/config/apex-tools/default/pathauto.pattern.distributors.yml
@@ -7,12 +7,12 @@ dependencies:
 id: distributors
 label: Distributors
 type: 'canonical_entities:node'
-pattern: 'distributor/[node:title]'
+pattern: 'localrep/[node:title]'
 selection_criteria:
-  db21ea53-b889-4718-97d4-88ec32d1057b:
+  16650960-62e0-46cf-9450-ef18f04a953d:
     id: 'entity_bundle:node'
     negate: false
-    uuid: db21ea53-b889-4718-97d4-88ec32d1057b
+    uuid: 16650960-62e0-46cf-9450-ef18f04a953d
     context_mapping:
       node: node
     bundles:
