--- a/config/apex-tools/default/pathauto.pattern.solutions.yml
+++ b/config/apex-tools/default/pathauto.pattern.solutions.yml
@@ -7,12 +7,12 @@ dependencies:
 id: solutions
 label: Solutions
 type: 'canonical_entities:node'
-pattern: 'solutions/[node:title]'
+pattern: 'industry-solutions/[node:title]'
 selection_criteria:
-  6561bffd-120e-47e6-a574-a36985ead8a7:
+  5375ed9e-abf2-467f-9da3-b40a511cb43f:
     id: 'entity_bundle:node'
     negate: false
-    uuid: 6561bffd-120e-47e6-a574-a36985ead8a7
+    uuid: 5375ed9e-abf2-467f-9da3-b40a511cb43f
     context_mapping:
       node: node
     bundles:
