Apex-552: Add target in brand url field.

--- a/config/apextoolgroup/default/views.view.office.yml
+++ b/config/apextoolgroup/default/views.view.office.yml
@@ -2290,7 +2290,7 @@ display:
             url_only: true
             url_plain: false
             rel: '0'
-            target: '0'
+            target: _blank
           group_column: ''
           group_columns: {  }
           group_rows: true
