--- a/config/crescenttool_au/default/migrate_plus.migration.crescenttool_au_products.yml
+++ b/config/crescenttool_au/default/migrate_plus.migration.crescenttool_au_products.yml
@@ -108,6 +108,10 @@ source:
       name: remote_brand
       label: Brand
       selector: './/*[@AttributeID=''Brand'']'
+    -
+      name: remote_show_discontinued_products
+      label: 'Show Discontinued Products'
+      selector: Values
     - 
       name: status
       label: Status
@@ -125,11 +129,12 @@ source:
       type: string
 process:
   status:
-    plugin: apex_determine_published_status
-    source: status
-    value:
+    plugin: apex_show_discontinued_products
+    source: remote_show_discontinued_products
+    allowed_values:
+      - Z2
       - Z3
-      - Z4
+      - Z5
   sales_org:
     plugin: skip_on_value
     not_equals: true
