--- a/config/gearwrench/default/migrate_plus.migration.gearwrench_products.yml
+++ b/config/gearwrench/default/migrate_plus.migration.gearwrench_products.yml
@@ -133,6 +133,12 @@ process:
       - Z2
       - Z3
       - Z5
+  sales_org:
+    plugin: skip_on_value
+    not_equals: true
+    source: remote_sales_org
+    method: row
+    value: 1201
   type:
     plugin: default_value
     default_value: product
