--- a/config/apex-tools/default/core.extension.yml
+++ b/config/apex-tools/default/core.extension.yml
@@ -66,11 +66,13 @@ module:
   file_mdm_exif: 0
   file_mdm_font: 0
   filter: 0
+  fixed_block_content: 0
   geocoder: 0
   geocoder_address: 0
   geocoder_field: 0
   geocoder_geofield: 0
   geofield: 0
+  hal: 0
   help: 0
   helpers: 0
   history: 0
