--- a/config/apex-tools/local/core.extension.yml
+++ b/config/apex-tools/local/core.extension.yml
@@ -5,6 +5,7 @@ module:
   acquia_purge: 0
   acquia_search: 0
   address: 0
+  addtothis_apex_tool: 0
   admin_toolbar: 0
   advagg: 0
   advagg_css_minify: 0
@@ -70,11 +71,13 @@ module:
   file_mdm_exif: 0
   file_mdm_font: 0
   filter: 0
+  fixed_block_content: 0
   geocoder: 0
   geocoder_address: 0
   geocoder_field: 0
   geocoder_geofield: 0
   geofield: 0
+  hal: 0
   help: 0
   helpers: 0
   history: 0
