--- a/config/apex-tools/default/apex_tools.settings.yml
+++ b/config/apex-tools/default/apex_tools.settings.yml
@@ -7,5 +7,5 @@ logo:
   use_default: 1
 favicon:
   use_default: 0
-  path: themes/custom/apex_tools/dist/img/favicon.png
-  mimetype: image/png
+  path: themes/custom/apex_tools/dist/img/favicon.ico
+  mimetype: image/vnd.microsoft.icon
