APEX-612: Download section

--- a/config/apex-tools/default/block.block.catalogseuropeen.yml
+++ b/config/apex-tools/default/block.block.catalogseuropeen.yml
@@ -1,25 +1,25 @@
-uuid: 757c90f2-305d-44cb-b5a0-94d903003141
+uuid: a2adfa61-a1c0-47a3-84d5-31cb10b69e93
 langcode: en
 status: true
 dependencies:
   config:
-    - fixed_block_content.fixed_block_content.downloads_europe_en
+    - fixed_block_content.fixed_block_content.catalogs_europe_en
   module:
     - fixed_block_content
     - language
     - system
   theme:
     - apex_tools
-id: downloadseuropeen
+id: catalogseuropeen
 theme: apex_tools
 region: content
-weight: -9
+weight: -6
 provider: null
-plugin: 'fixed_block_content:downloads_europe_en'
+plugin: 'fixed_block_content:catalogs_europe_en'
 settings:
-  id: 'fixed_block_content:downloads_europe_en'
-  label: 'Product Documents'
-  label_display: visible
+  id: 'fixed_block_content:catalogs_europe_en'
+  label: CATALOGS
+  label_display: '0'
   provider: fixed_block_content
   view_mode: ''
 visibility:
