--- a/config/apex-tools/default/block.block.catalogseuropede.yml
+++ b/config/apex-tools/default/block.block.catalogseuropede.yml
@@ -1,24 +1,24 @@
-uuid: 757c90f2-305d-44cb-b5a0-94d903003141
+uuid: 4e34d782-5506-4af4-b07e-bb914c0010b4
 langcode: en
 status: true
 dependencies:
   config:
-    - fixed_block_content.fixed_block_content.downloads_europe_en
+    - fixed_block_content.fixed_block_content.catalogs_europe_de
   module:
     - fixed_block_content
     - language
     - system
   theme:
     - apex_tools
-id: downloadseuropeen
+id: catalogseuropede
 theme: apex_tools
 region: content
-weight: -9
+weight: -7
 provider: null
-plugin: 'fixed_block_content:downloads_europe_en'
+plugin: 'fixed_block_content:catalogs_europe_de'
 settings:
-  id: 'fixed_block_content:downloads_europe_en'
-  label: 'Product Documents'
+  id: 'fixed_block_content:catalogs_europe_de'
+  label: KATALOGE
   label_display: visible
   provider: fixed_block_content
   view_mode: ''
@@ -29,7 +29,7 @@ visibility:
     context_mapping:
       language: '@language.current_language_context:language_interface'
     langcodes:
-      gb: gb
+      de: de
   request_path:
     id: request_path
     negate: false
