--- a/config/apex-tools/default/block.block.catalogslinkeuropeen.yml
+++ b/config/apex-tools/default/block.block.catalogslinkeuropeen.yml
@@ -1,25 +1,25 @@
-uuid: 757c90f2-305d-44cb-b5a0-94d903003141
+uuid: 0a70bc68-c81b-4d82-8328-0029065a082b
 langcode: en
 status: true
 dependencies:
   config:
-    - fixed_block_content.fixed_block_content.downloads_europe_en
+    - fixed_block_content.fixed_block_content.catalogs_link_europe_en
   module:
     - fixed_block_content
     - language
     - system
   theme:
     - apex_tools
-id: downloadseuropeen
+id: catalogslinkeuropeen
 theme: apex_tools
 region: content
-weight: -9
+weight: 0
 provider: null
-plugin: 'fixed_block_content:downloads_europe_en'
+plugin: 'fixed_block_content:catalogs_link_europe_en'
 settings:
-  id: 'fixed_block_content:downloads_europe_en'
-  label: 'Product Documents'
-  label_display: visible
+  id: 'fixed_block_content:catalogs_link_europe_en'
+  label: 'CATALOGS link(Europe / EN)'
+  label_display: '0'
   provider: fixed_block_content
   view_mode: ''
 visibility:
