--- a/config/apex-tools/default/block.block.catalogslinknorthamericaen.yml
+++ b/config/apex-tools/default/block.block.catalogslinknorthamericaen.yml
@@ -1,25 +1,25 @@
-uuid: 757c90f2-305d-44cb-b5a0-94d903003141
+uuid: 988958d4-e9d6-4fdc-a19f-e0e99d04057c
 langcode: en
 status: true
 dependencies:
   config:
-    - fixed_block_content.fixed_block_content.downloads_europe_en
+    - fixed_block_content.fixed_block_content.catalogs_link_north_america_en
   module:
     - fixed_block_content
     - language
     - system
   theme:
     - apex_tools
-id: downloadseuropeen
+id: catalogslinknorthamericaen
 theme: apex_tools
 region: content
-weight: -9
+weight: 0
 provider: null
-plugin: 'fixed_block_content:downloads_europe_en'
+plugin: 'fixed_block_content:catalogs_link_north_america_en'
 settings:
-  id: 'fixed_block_content:downloads_europe_en'
-  label: 'Product Documents'
-  label_display: visible
+  id: 'fixed_block_content:catalogs_link_north_america_en'
+  label: 'CATALOGS Link(North America / EN)'
+  label_display: '0'
   provider: fixed_block_content
   view_mode: ''
 visibility:
@@ -29,7 +29,7 @@ visibility:
     context_mapping:
       language: '@language.current_language_context:language_interface'
     langcodes:
-      gb: gb
+      en: en
   request_path:
     id: request_path
     negate: false
