--- a/config/apex-tools/default/block.block.downloadseuropede.yml
+++ b/config/apex-tools/default/block.block.downloadseuropede.yml
@@ -13,13 +13,13 @@ dependencies:
 id: downloadseuropede
 theme: apex_tools
 region: content
-weight: -8
+weight: -10
 provider: null
 plugin: 'fixed_block_content:downloads_europe_de'
 settings:
   id: 'fixed_block_content:downloads_europe_de'
-  label: 'Downloads(Europe / DE)'
-  label_display: '0'
+  label: 'Produktunterlagen finden'
+  label_display: visible
   provider: fixed_block_content
   view_mode: ''
 visibility:
