--- a/config/apex-tools/default/block.block.downloadsnorthamericaen.yml
+++ b/config/apex-tools/default/block.block.downloadsnorthamericaen.yml
@@ -13,13 +13,13 @@ dependencies:
 id: downloadsnorthamericaen
 theme: apex_tools
 region: content
-weight: -9
+weight: -11
 provider: null
 plugin: 'fixed_block_content:downloads'
 settings:
   id: 'fixed_block_content:downloads'
-  label: 'Downloads(North America / EN)'
-  label_display: '0'
+  label: 'Product Documents'
+  label_display: visible
   provider: fixed_block_content
   view_mode: ''
 visibility:
